objects/User.object
<CustomObject>
    <fields>
        <fullName>AE_Backup_Email__c</fullName>
        <label>AE Backup Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AE_Backup__c</fullName>
        <label>AE Backup</label>
        <relationshipName>AE_Backup</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>AE_Business_Unit__c</fullName>
        <label>AE Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_AE_Backup__c</fullName>
        <formula>HYPERLINK(&quot;/apex/AE_Backup_Assignment?Id=&quot; &amp; Id, &quot;Click here&quot; ,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>To remove AE backup, please remove the name and make it &quot;Blank&quot; and then Save.</inlineHelpText>
        <label>Set/Remove AE Backup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_3__c</fullName>
        <label>Address 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alias__c</fullName>
        <label>Nick Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Phone__c</fullName>
        <label>Alternate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Approval_Level__c</fullName>
        <description>Field moved to Approval Matrix table</description>
        <label>Approval Level_OBSOLETE</label>
        <picklist>
            <picklistValues>
                <fullName>Level 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Next_Level_Approver__c</fullName>
        <description>Field moved to Approval Matrix table</description>
        <label>Next Level Approver_OBSOLETE</label>
        <relationshipName>Users</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Article_Publisher__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Establishes permission to set Articles to Publish.</description>
        <label>Article Publisher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Follow_Reopened_Cases__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Auto Follow Reopened Cases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Availability__c</fullName>
        <label>Availability</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_For_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AE Available For Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_Until__c</fullName>
        <description>S_EMP_PER</description>
        <label>Available Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Account_ID__c</fullName>
        <label>Account ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Account__c</fullName>
        <formula>if(Contact.Account.Name == null, BMCServiceDesk__Account_Name__c, Contact.Account.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AssetManagementView__c</fullName>
        <label>Asset Management View</label>
        <picklist>
            <picklistValues>
                <fullName>Hidden</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Read-Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update and Delete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AssignRemedyforceLic__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this check box to assign Remedyforce seat license.</inlineHelpText>
        <label>Assign Remedyforce License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Broadcast_ticker_speed__c</fullName>
        <inlineHelpText>Enter a value between 1 and 10,where 1=Slow and 10=Fast</inlineHelpText>
        <label>Broadcast ticker speed</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Building__c</fullName>
        <label>Building</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Business_Hours_ID__c</fullName>
        <label>Business Hours ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Business_Hours__c</fullName>
        <inlineHelpText>Select the shift in which the staff member works.</inlineHelpText>
        <label>Business Hours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CIManagementView__c</fullName>
        <label>CI Management View</label>
        <picklist>
            <picklistValues>
                <fullName>Hidden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read-Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update and Delete</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ChatStatus__c</fullName>
        <inlineHelpText>Select the chat status.</inlineHelpText>
        <label>Chat Status</label>
        <picklist>
            <picklistValues>
                <fullName>Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Busy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offline</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ContactId__c</fullName>
        <label>ContactId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__EnableChat__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this check box to enable the user to chat.</inlineHelpText>
        <label>Enable Chat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Extension__c</fullName>
        <formula>Extension</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extension</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FPLoginID__c</fullName>
        <inlineHelpText>This field stores the Login ID of the validated BMC FootPrints Asset Core user.</inlineHelpText>
        <label>BCM Login ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FP_Login_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BCM Login Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ImageName__c</fullName>
        <label>Image Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IsOutOfOffice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out of Office</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IsRemedyforceAdministrator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remedyforce Administrator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IsStaffUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ServiceDesk Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LastAvailableTime__c</fullName>
        <inlineHelpText>Displays the last time when the user Status was Available.</inlineHelpText>
        <label>Last Available Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LastChatEndTime__c</fullName>
        <inlineHelpText>Displays the time when the last chat ended.</inlineHelpText>
        <label>Last Chat End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Manage_QV__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables staff members to create and manage QuickViews in the Remedyforce Console.</description>
        <label>Manage QuickViews</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Manage_ServiceDesk_Staff_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manage ServiceDesk Staff Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Note__c</fullName>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Picture__c</fullName>
        <formula>IMAGE(&quot;/resource/&quot; + BMCServiceDesk__ImageName__c ,  FirstName + &quot; &quot; + LastName, 80, 80 )</formula>
        <label>Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Remedyforce_Casual_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remedyforce Casual User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Remedyforce_Knowledge_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remedyforce Knowledge User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Room__c</fullName>
        <label>Room</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Schedule_CR_and_Blackouts_During_Overlap__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Allows to schedule change requests during a blackout and create a blackout when change requests exists for that duration.</inlineHelpText>
        <label>Override Blackouts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SelfService_Preferences__c</fullName>
        <description>SelfService user preference settings</description>
        <label>SelfService Preferences</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__UniqueUserIDInSource__c</fullName>
        <description>This is the unique field which identifies the user in the source object from where the user is getting imported. This is usually the LDAP or AD username or any other similar identifier</description>
        <externalId>true</externalId>
        <label>Unique User ID in Source</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__User_License__c</fullName>
        <formula>Profile.UserLicense.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User License</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates if the user is VIP.</inlineHelpText>
        <label>VIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__pager__c</fullName>
        <label>Pager</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__remarks__c</fullName>
        <label>Remarks</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__skipQVWizIntro__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Skip QV Wizard Introduction screen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>By_Pass_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field is checked for migration user than Contact trigger will be by Passed.</description>
        <inlineHelpText>Check this field to by pass Contact Trigger</inlineHelpText>
        <label>By Pass Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CNTRCTR_FLG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contractor Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cadence_Entity__c</fullName>
        <label>Cadence Entity</label>
        <picklist>
            <picklistValues>
                <fullName>Cadence Design Systems (Canada) Ltd.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadence Design Systems (Israel) Ltd.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadence Design Systems (Japan) B.V.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadence Design Systems AB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadence Design Systems B.V.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadence Design Systems GmbH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadence Design Systems Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadence Design Systems S.A.S.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadence Design Systems S.r.l.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadence Design Systems, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadence Design Systems (Ireland) Limited</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <picklist>
            <picklistValues>
                <fullName>Cadence Design Systems, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadence Design Systems Limited</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Migration_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Migration User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DefaultPage__c</fullName>
        <label>DefaultPage</label>
        <picklist>
            <picklistValues>
                <fullName>Articles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Cadence Division</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Default Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing-ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R And D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EMP_STAT_CD__c</fullName>
        <label>Employee Status Code</label>
        <picklist>
            <picklistValues>
                <fullName>Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unavailable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employee_Number__c</fullName>
        <externalId>true</externalId>
        <label>Employee Number (Cadence)</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Employee_Type__c</fullName>
        <label>Employee Type</label>
        <picklist>
            <picklistValues>
                <fullName>Employee</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <label>Employment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unavailable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Entity_Code__c</fullName>
        <label>Entity Code</label>
        <picklist>
            <picklistValues>
                <fullName>1000-CADENCE (US)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1040-CADENCE (CANADA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1140-QUICKTURN (US)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1150-ORCAD (US)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3000-CADENCE (FRANCE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3020-CADENCE (GERMANY)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3030-CADENCE (ITALY)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3040-CADENCE (HOLLAND)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3050-CADENCE (UK)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3060-CADENCE (SWEDEN)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3070-CADENCE (ISRAEL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3080-ACENT (ITALY)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3110-CADENCE (IRELAND)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3120-SYMBIONICS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3230-ORCAD (UK)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3250-CADENCE DESIGN SYSTEMS BV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3280-CADENCE (Hungary)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5000-CADENCE (TAIWAN)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5030-CADENCE (KOREA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5080-CADENCE METHODOLGY SERVICES CORPORATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7000-CADENCE (JAPAN)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7040-CADENCE SVC (JAPAN)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7060-ORCAD (JAPAN)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7100-JAPAN TK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8020-TALITY L.P.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8060-TALITY CANADA CORP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <label>External Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_HR_Business_Partner__c</fullName>
        <label>Global HR Business Partner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HIRE_DT__c</fullName>
        <label>Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ISO_Country__c</fullName>
        <label>ISO Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_Annual_Price__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Include Annual Price in Renewal Maintenance Reports.</description>
        <label>Include Annual Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Discount_99Yr__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines if the Discount shall be included in the quote report</description>
        <label>Include Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Extended_Price_for_Quotes__c</fullName>
        <defaultValue>true</defaultValue>
        <description>flag to exclude extended price for quotes</description>
        <label>Include Extended Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_List_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include List Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Renmaint_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_TBL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include 1 Yr TBL List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_WAN_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines if the WAN rate shall be included in the quote report</description>
        <label>Include WAN Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_WAN_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines if the WAN type shall be included in the quote report</description>
        <label>Include WAN Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_WAN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines if the WAN shall be included in the quote report</description>
        <label>Include WAN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Data_Steward__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This should only be used for Data Stewards</inlineHelpText>
        <label>Is Data Steward</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used to track if a user is a VIP user.</description>
        <label>Is VIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_First_Name__c</fullName>
        <label>Legal_First_Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login_Count__c</fullName>
        <label>Login Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Login_Expiration_Date__c</fullName>
        <label>Login Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Login__c</fullName>
        <description>Copy of the Federation ID because the API doesn&apos;t list it.  Populated from a trigger.  DO NOT DISPLAY.</description>
        <externalId>true</externalId>
        <inlineHelpText>Copy of the Federation ID because the API doesn&apos;t list it.  Populated from a trigger.  DO NOT DISPLAY.</inlineHelpText>
        <label>Login</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mail_Stop__c</fullName>
        <label>Mail Stop</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_1_Login__c</fullName>
        <formula>Manager.Login__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager 1 Login</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_2_Login__c</fullName>
        <formula>Manager.Manager.Login__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager 2 Login</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_3_Login__c</fullName>
        <formula>Manager.Manager.Manager.Login__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager 3 Login</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Row_Id_Login__c</fullName>
        <description>Created for Latha &amp; Team to QA Manager Assignments</description>
        <formula>Manager.Row_Id__c  &amp; &quot; - &quot;  &amp; Manager.Login__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager Row Id &amp; Login</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Person_OM_Def__c</fullName>
        <label>OM Person</label>
        <relationshipName>User</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Office_Location__c</fullName>
        <label>Office_Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Number__c</fullName>
        <label>Office_Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opty_Bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for update Opps without running into all the validations.</description>
        <label>Opty Bypass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organization_Unit__c</fullName>
        <label>Organization Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAGER_PH_NUM__c</fullName>
        <label>Pager Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Preferred_comm__c</fullName>
        <label>Preferred Communication</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <label>Profile (Siebel)</label>
        <picklist>
            <picklistValues>
                <fullName>CRC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRC Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSG Manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NACS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Row_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Row Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SSG_Available_For_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SSG Available For Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSG_Permission__c</fullName>
        <formula>IF( Profile.Name==&apos;5_5_Support SSG Agent&apos; , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SSG Permission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>STAT_CD__c</fullName>
        <inlineHelpText>(A)dd, (C)hange, (D) Delete</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SVMXC__Dispatch_Console_Settings__c</fullName>
        <label>Dispatch Console Settings</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>